--- a/AB_EXTRACTION_AND_EDA.ipynb
+++ b/AB_EXTRACTION_AND_EDA.ipynb
@@ -78,8 +78,8 @@
    ],
    "source": [
     "# Set up your Kaggle API key\n",
-    "os.environ[\"KAGGLE_USERNAME\"] = \"leonardosantanaol\"\n",
-    "os.environ[\"KAGGLE_KEY\"] = \"a05f1c3f7db9e29989480d2e43b076ab\"\n",
+    "os.environ[\"KAGGLE_USERNAME\"] = \"Your_username\"\n",
+    "os.environ[\"KAGGLE_KEY\"] = \"Your_key\"\n",
     "\n",
     "# Download the dataset using the Kaggle API\n",
     "subprocess.run([\"kaggle\", \"datasets\", \"download\", \"-d\", \"faviovaz/marketing-ab-testing\"])\n",
